client/src/components/indicators/Task/Task.module.scss
@import 'src/styles/variables.scss';

.container {
  display: inline-flex;
  position: relative;
  width: 22.15em;
  padding: $symmetrical-padding;
}

.topLine {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.titleContainer {
  font-size: $font-l;
}

.infoContainer {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  gap: $base-gap;

  &.repeats {
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
    gap: 0;
  }
}

.streakContainer {
  display: inline-block;
}

